feat: integrate Firebase authentication, implement protected routes, and refactor HN item types

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.5.2",
+    "firebase": "^11.5.0",
     "html-entities": "^2.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
