--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-entities": "^2.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.482.0",
+    "netlify-cli": "^19.1.4",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
